# KeiKai

./: .gitignore  README.md
backend/: docker-compose.yml  manage.py  pyproject.toml
backend/lightpollution/: apps.py  integration.py  models.py  mutations.py  schema.py  types.py
backend/nasa2020/: asgi.py  schema.py  settings.py  urls.py  wsgi.py
documentation/: config.js
documentation/content/: about_project.md  index.mdx  introduction.md  light_pollution.md  light_pollution_biodiversity.md  project_development.md
documentation/content/codeblock/: 1-index.md
documentation/src/components/: Header.js
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js
frontend/src/components/Filters/: index.js
frontend/src/components/Map/: index.js
frontend/src/config/: apollo.js
frontend/src/context/map/: mapReducer.js  mapState.js
frontend/src/pages/: Map.js
frontend/src/types/: index.js
scripts/: NTL_diffs.py  batch_crop.py  batch_dffs.py  crop_HeatmapLayer_JSON.py  plot_MOD13C2.py  plot_NTL.py  plot_light_evol.py  polygons_light.py  process_MOD13C2_monthly.py  process_NTL.py
