[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["MaChimal <mariochimal00aa@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.1.2"
mongo = "^0.2.0"
graphene = "^2.1.8"
mongoengine = "^0.20.0"
graphene-mongo = "^0.2.13"
django-environ = "^0.4.5"
django-filter = "^2.4.0"
graphene-django = "^2.13.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
